samples/_failures_safe/1761793089_920469_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d4ed814.c: In function ‘main’:
./samples/SAFE/__tmp_3d4ed814.c:160:9: error: expected declaration or statement at end of input
  160 |         choice = read_int("Choose operation (1-5): ", 1, 5);
      |         ^~~~~~
./samples/SAFE/__tmp_3d4ed814.c:160:9: error: expected declaration or statement at end of input
